Added selection object id to lists selection

--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -335,7 +335,7 @@
                                 <property name="can_focus">True</property>
                                 <property name="enable_grid_lines">both</property>
                                 <child internal-child="selection">
-                                  <object class="GtkTreeSelection"/>
+                                  <object class="GtkTreeSelection" id="PanelDatabaseSlavesSelection"/>
                                 </child>
                               </object>
                               <packing>
@@ -432,7 +432,7 @@
                         <property name="can_focus">True</property>
                         <property name="enable_grid_lines">both</property>
                         <child internal-child="selection">
-                          <object class="GtkTreeSelection"/>
+                          <object class="GtkTreeSelection" id="PanelDatabaseSignalsSelection"/>
                         </child>
                       </object>
                     </child>
@@ -662,6 +662,7 @@
                 <property name="max_length">4</property>
                 <property name="width_chars">6</property>
                 <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">100</property>
@@ -686,6 +687,7 @@
                 <property name="max_length">4</property>
                 <property name="width_chars">6</property>
                 <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">500</property>
@@ -708,6 +710,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">8</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">100</property>
@@ -730,6 +734,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">300</property>
@@ -752,6 +758,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">4</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">500</property>
@@ -799,6 +807,7 @@
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
                 <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">100</property>
@@ -821,6 +830,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">300</property>
@@ -844,6 +855,7 @@
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
                 <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">100</property>
@@ -866,6 +878,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
               </object>
               <packing>
                 <property name="x">300</property>
@@ -959,6 +973,229 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkDialog" id="VentanaSenal">
+    <property name="can_focus">False</property>
+    <property name="type_hint">dialog</property>
+    <child>
+      <placeholder/>
+    </child>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+            <child>
+              <object class="GtkButton" id="VentanaSenalCancel">
+                <property name="label" translatable="yes">Cancel</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="VentanaSenalAccept">
+                <property name="label" translatable="yes">Accept</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkFixed">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Name</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">10</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry">
+                <property name="name">VentanaSenalName</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="width_chars">20</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">5</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Bit size</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">40</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry">
+                <property name="name">VentanaSenalBitSize</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="width_chars">3</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">35</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Default value</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">70</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry">
+                <property name="name">VentanaSenalDefaultValue</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="width_chars">12</property>
+                <property name="truncate_multiline">True</property>
+                <property name="caps_lock_warning">False</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">65</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Publisher</property>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">100</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBoxText">
+                <property name="name">VentanaSenalPublisher</property>
+                <property name="width_request">200</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+              </object>
+              <packing>
+                <property name="x">100</property>
+                <property name="y">95</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow">
+                <property name="width_request">245</property>
+                <property name="height_request">130</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">never</property>
+                <property name="shadow_type">in</property>
+                <child>
+                  <object class="GtkTreeView" id="VentanaSenalSubscriberList">
+                    <property name="name">VentanaSenalSubscribersList</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="VentanaSenalSubscriberSelection"/>
+                    </child>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="x">5</property>
+                <property name="y">130</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">New</property>
+                <property name="name">VentanaSenalSubscriberNew</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">255</property>
+                <property name="y">135</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Edit</property>
+                <property name="name">VentanaSenalSubscriberEdit</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">255</property>
+                <property name="y">170</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Delete</property>
+                <property name="name">VentanaSenalSubscriberDelete</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="x">255</property>
+                <property name="y">205</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
