--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -217,6 +217,40 @@
       </object>
     </child>
   </object>
+  <object class="GtkDialog" id="VentanaFrameSignal">
+    <property name="can_focus">False</property>
+    <property name="type_hint">dialog</property>
+    <child>
+      <placeholder/>
+    </child>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkApplicationWindow" id="VentanaInicio">
     <property name="width_request">800</property>
     <property name="height_request">600</property>
@@ -1263,9 +1297,9 @@
       </object>
     </child>
   </object>
-  <object class="GtkDialog" id="VentanaSelectSignal">
+  <object class="GtkDialog" id="VentanaSelectNode">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Select signal</property>
+    <property name="title" translatable="yes">Select node</property>
     <property name="resizable">False</property>
     <property name="icon_name">network-wired</property>
     <property name="type_hint">dialog</property>
@@ -1282,7 +1316,7 @@
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="VentanaSelectSignalCancel">
+              <object class="GtkButton" id="VentanaSelectNodeCancel">
                 <property name="label" translatable="yes">Cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -1295,7 +1329,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="VentanaSelectSignalAccept">
+              <object class="GtkButton" id="VentanaSelectNodeAccept">
                 <property name="label" translatable="yes">Accept</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -1323,7 +1357,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Signal</property>
+                <property name="label" translatable="yes">Node</property>
               </object>
               <packing>
                 <property name="x">5</property>
@@ -1331,7 +1365,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBoxText" id="VentanaSelectSignalName">
+              <object class="GtkComboBoxText" id="VentanaSelectNodeName">
                 <property name="name">VentanaSenalPublisher</property>
                 <property name="width_request">210</property>
                 <property name="visible">True</property>
