--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -1323,21 +1323,6 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <child>
-                          <object class="GtkTreeView" id="VentanaNodoEsclavoConfigFrameList">
-                            <property name="width_request">510</property>
-                            <property name="height_request">150</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <child internal-child="selection">
-                              <object class="GtkTreeSelection"/>
-                            </child>
-                          </object>
-                          <packing>
-                            <property name="x">5</property>
-                            <property name="y">5</property>
-                          </packing>
-                        </child>
-                        <child>
                           <object class="GtkButton" id="VentanaNodoEsclavoConfigFrameNew">
                             <property name="label" translatable="yes">New</property>
                             <property name="visible">True</property>
@@ -1371,6 +1356,30 @@
                           <packing>
                             <property name="x">525</property>
                             <property name="y">75</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkScrolledWindow">
+                            <property name="width_request">510</property>
+                            <property name="height_request">150</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="shadow_type">in</property>
+                            <child>
+                              <object class="GtkTreeView" id="VentanaNodoEsclavoConfigFrameList">
+                                <property name="width_request">510</property>
+                                <property name="height_request">150</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <child internal-child="selection">
+                                  <object class="GtkTreeSelection" id="VentanaNodoEsclavoConfigFrameSelection"/>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="x">5</property>
+                            <property name="y">5</property>
                           </packing>
                         </child>
                       </object>
