--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -1010,6 +1010,64 @@
               <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <child>
+                  <object class="GtkScrolledWindow">
+                    <property name="width_request">683</property>
+                    <property name="height_request">525</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="shadow_type">in</property>
+                    <child>
+                      <object class="GtkTreeView" id="PanelDatabaseScheduleTablesList">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <child internal-child="selection">
+                          <object class="GtkTreeSelection" id="PanelDatabaseScheduleTablesSelection"/>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="x">5</property>
+                    <property name="y">5</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="PanelDatabaseScheduleTablesNew">
+                    <property name="label" translatable="yes">New</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="x">510</property>
+                    <property name="y">535</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="PanelDatabaseScheduleTablesEdit">
+                    <property name="label" translatable="yes">Edit</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="x">570</property>
+                    <property name="y">535</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="PanelDatabaseScheduleTablesDelete">
+                    <property name="label" translatable="yes">Delete</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="x">625</property>
+                    <property name="y">535</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="position">4</property>
